// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoListItem snapshot test 1`] = `
<body>
  <div>
    <li>
      <label>
        <input
          type="checkbox"
        />
        item 1
      </label>
    </li>
  </div>
</body>
`;

exports[`TodoListItem snapshot test 2`] = `
<body>
  <div>
    <li>
      <label
        class="complete"
      >
        <input
          checked=""
          type="checkbox"
        />
        item 2
      </label>
    </li>
  </div>
</body>
`;
